<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitto</string>
    <string name="signout">Sing out</string>
    <string name="login_label">Log in</string>
    <string name="twitter">Twitter</string>
    <string name="tweets_welcome">Welcome to your home of tweets</string>
    <string name="connect_twitter_account">Connect twitter account</string>
    <string name="sample_tweet">Помешает ли кольцо в носу на собеседовании? Инструкция для тех, кто ищет работу.Помешает ли кольцо в носу на собеседовании? Инструкция для тех, кто ищет работу.</string>
    <string name="profile_image">Profile image</string>
    <string name="create_tweet_hint">What\'s happening?</string>
    <string name="compose_new_tweet">Compose Tweet</string>
    <string name="tweet">Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="_140">140</string>
    <string name="post_image">Post image</string>

    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

</resources>